# SpotifyRanker

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  design.md  docker-compose.yml  idea.md  mypy.ini  plan.md  pyproject.toml  ruff.toml
.claude/agents/: advisor.md  architect.md  backend-api.md  data-persistence.md  devops.md  docs.md  domain-core.md  frontend.md  orchestrator.md  planner.md  pr-reviewer.md  recommendation-ranking.md  reviewer.md  (+1 more)
db/: engine.py  init_db.py  models.py  session.py
docs/: agent_workflow.md  parallel_development.md  review_checklist.md
scripts/: migrate_T035_track_denorm.py
tasks/: T-001-repo-scaffold.md  T-002-common-contracts.md  T-003-db-orm-models.md  T-004-db-init-session.md  T-005-spotify-oauth.md  T-006-db-repositories.md  T-007-spotify-fetcher.md  T-008-import-library-search.md  T-009-feedback-endpoints.md  T-010-profile-builder.md  T-011-react-app-shell.md  T-012-auth-flow-frontend.md  T-013-mi-musica.md  T-014-buscar-section.md  T-015-player-panel.md  T-016-trackcard-feedback.md  T-017-ml-features.md  T-018-training-dataset.md  T-019-two-tower-model.md  T-020-training-loop.md  T-021-inference-engine.md  T-022-ranker-modes-diversifier.md  T-023-candidate-generator.md  T-024-playlist-assembler.md  T-025-playlist-endpoints.md  T-026-descubrir-frontend.md  T-027-retraining-trigger.md  T-028-model-endpoints.md  T-029-onboarding-backend.md  T-030-onboarding-frontend.md  T-031-hard-negative-mining.md  T-032-embedding-cache.md  T-033-edge-case-hardening.md  T-034-evaluation-metrics.md  T-035-bugs.md
(+119 files in other folders)
